--- a/src/pages/material/acrylic.astro
+++ b/src/pages/material/acrylic.astro
@@ -3,7 +3,7 @@
 // Halaman ini sekarang juga jadi super simpel!
 
 import Layout from '@/layouts/Layout.astro';
-import MaterialDetail from '@/MaterialDetail.astro';
+import MaterialDetail from '@/components/MaterialDetail.astro';
 import { MATERIALS, SITE_CONFIG } from '@/utils/constants.js';
 
 // 1. Ambil data spesifik untuk Acrylic dari pusat data
