--- a/src/pages/material/grc.astro
+++ b/src/pages/material/grc.astro
@@ -3,7 +3,7 @@
 // Done. Simpel dan bersih.
 
 import Layout from '@/layouts/Layout.astro';
-import MaterialDetail from '@/MaterialDetail.astro';
+import MaterialDetail from '@/components/MaterialDetail.astro';
 import { MATERIALS, SITE_CONFIG } from '@/utils/constants.js';
 
 // 1. Ambil data spesifik untuk GRC dari pusat data
