--- a/src/pages/material/pvc.astro
+++ b/src/pages/material/pvc.astro
@@ -3,7 +3,7 @@
 // Makin deket ke garis finish.
 
 import Layout from '@/layouts/Layout.astro';
-import MaterialDetail from '@/MaterialDetail.astro';
+import MaterialDetail from '@/components/MaterialDetail.astro';
 import { MATERIALS, SITE_CONFIG } from '@/utils/constants.js';
 
 // 1. Ambil data spesifik untuk PVC dari pusat data
